# mpy-debugpy

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md  mbm.toml  pyproject.toml
.github/scripts/: write_fragment.py
.github/workflows/: firmware.yml
firmware/: firmware.toml
launcher/: .gitignore  capcheck.py  compile_debugpy.py  debugpy.json  debugpy_mpy.json  firmware.py  gen_manifest.py  mpy_launch_debugpy.py  upload_all.py
planning/: 00_index.md  20260706_flocals_params.md  20260706_recomposition.md  20260706_vscode-extension-direction.md  20260715_phase0-canonical-branches-mbm.md  20260715_roadmap-review.md  BACKGROUND.md  ROADMAP.md  SPIKE-2.1-mount.md  SPIKE-2.2-serial-dap.md
planning/tickets/: s3.2_ci-firmware-builds.md  s3.3_variant-matrix-collapse.md  s3.4_firmware-docs.md  s4.1_device-debugpy-install.md  s4.2_incremental-sync.md  s4.4_sync-tests.md  (+20 more)
src/: _secrets_sample.py  async_sample.py  boot.py  building.py  check_settrace.py  demo_complex_vars.py  demo_enhanced_dap.py  foobar.py  pystone.py  run_pystone.py  target.py  test_dap_setvariable.py  test_enhanced_vars_micropython.py  test_set_variable_dap.py  test_vscode.py  wifi_scan.py
tests/: conftest.py  dap.py  helpers.py  mpy_debug_set_local.py  mpy_test_frame_set_local.py  mpy_test_set_variable_direct.py  test_capability_guard.py  test_capcheck.py  test_dbg_01_launcher.py  test_dbg_02_initialize.py  test_dbg_03_attach.py  test_dbg_04_breakpoints.py  test_dbg_05_continue.py  test_dbg_06_evaluate.py  test_epic1_foundations.py  test_firmware_fetch.py  test_firmware_select.py
(+3 files in other folders)
